# Agent-diy

./: .gitignore  langgraph.json  pyproject.toml
src/agent_diy/: __init__.py  __main__.py  agent_backend.py  local_agent_service.py  reminder_scheduler.py  reminder_store.py  telegram_bot.py  utils.py
src/agent_diy/core/: __init__.py  agent.py  model.py
src/agent_diy/mcp/: __init__.py  client.py  financial_news_server.py
src/agent_diy/prompts/: system.py
src/agent_diy/tools/: __init__.py  gmail_astrology.py  reminder.py  search.py  weather.py
tests/: conftest.py
tests/e2e/: test_conversation_e2e.py
tests/features/: conversation.feature  financial_news.feature  gmail_astrology.feature  reminder_crud.feature  reminder_execution_mode.feature  reminder_once.feature  scheduled_reminder.feature  streaming.feature  telegram_bot.feature  telegram_streaming.feature  time_query.feature  weather_query.feature  web_search.feature
tests/step_defs/: test_conversation.py  test_financial_news.py  test_gmail_astrology.py  test_reminder_crud.py  test_reminder_execution_mode.py  test_reminder_once.py  test_scheduled_reminder.py  test_streaming.py  test_telegram_bot.py  test_telegram_streaming.py  test_time_query.py  test_weather_query.py  test_web_search.py
tests/unit/: test_agent_backend.py  test_agent_reminder_passthrough.py  test_financial_news_client.py  test_local_agent_service.py  test_local_agent_service_integration.py  test_reminder_scheduler.py  test_telegram_bot_backend.py  test_time_tool_flow.py
