[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "agent-diy"
version = "0.1.0"
description = "Composable LangGraph-based agent framework"
requires-python = ">=3.12"
dependencies = [
  "alibabacloud_iqs20241111>=1.7.2",
  "fastmcp",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-mcp-adapters",
  "langgraph>=0.4.0",
  "langchain-anthropic>=0.2.0",
  "langgraph-cli[inmem]>=0.4.14",
  "requests>=2.32.0",
  "httpx",
  "langchain-google-community[gmail]>=3.0.5",
  "python-telegram-bot>=22.7",
]

[dependency-groups]
dev = [
  "langchain-openai>=0.3.0",
  "pytest>=8.0.0",
  "pytest-bdd>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_diy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "e2e: end-to-end tests requiring real API",
  "unit: unit tests with mocked dependencies",
]
addopts = "-ra -m 'not e2e'"
